# GLFW-window-stuff

./: .gitignore  CMakeLists.txt  Input.cpp  MainWindow.cpp  README.md  buttons.h  imWin.cpp  main.cpp
glad/: Makefile  cmake_install.cmake  glad.c  glad.h
glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw/src/: Makefile  cmake_install.cmake
imgui/: CMakeLists.txt  Makefile  cmake_install.cmake
